# psidekick-docker-extension

./: Dockerfile  README.md  docker-compose.yaml  metadata.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  supervisord.conf
.devcontainer/app-generator/scripts/: psi-generate
.devcontainer/app-generator/tools/: generate-service-cpp.js  generate-service-rust.js
.devcontainer/app-generator/tools/templates/applets-react/counter/: deploy.sh  index.html
.devcontainer/app-generator/tools/templates/applets-react/counter/src/: App.tsx
.devcontainer/app-generator/tools/templates/services-cpp/Calculator/: .gitignore  CMakeLists.txt
.devcontainer/app-generator/tools/templates/services-cpp/Calculator/test/: CMakeLists.txt  test.cpp
.devcontainer/app-generator/tools/templates/services-cpp/Calculator/test/src/: __service__-test.cpp
.devcontainer/app-generator/tools/templates/services-cpp/Empty/: __service__.cpp
.devcontainer/app-generator/tools/templates/services-cpp/Empty/test/: CMakeLists.txt
.devcontainer/app-generator/tools/templates/services-rust/Empty/: Cargo.toml
.devcontainer/services/: code.Dockerfile  docker-compose.yml  psinode.Dockerfile
.devcontainer/services/app-generator/: package.json
.devcontainer/services/app-generator/scripts/: psi-generate-applet-react  psi-generate-service-cpp  psi-generate-service-rust
.devcontainer/services/app-generator/tools/: generate-applet-react.js
.devcontainer/services/app-generator/tools/templates/applets-react/counter/: vite.config.ts
.devcontainer/services/app-generator/tools/templates/services-cpp/Calculator/: __service__.cpp
.devcontainer/services/app-generator/tools/templates/services-cpp/Empty/: CMakeLists.txt
.devcontainer/services/app-generator/tools/templates/services-rust/Empty/src/: lib.rs
scripts/: build-install  build-push-extension  install-ext  prepare-buildx
ui/: index.html
